--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -58,7 +58,7 @@
   display: block;
 }
 
-.teacher-item footer button{
+.teacher-item footer a{
   width: 20rem;
   height: 5.6rem;
   padding: 1.6rem;
@@ -72,34 +72,9 @@
   align-items: center;
   justify-content: space-between;
   transition:0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover{
+.teacher-item footer a:hover{
   background: var(--color-secundary-dark);
-}
-
-
-@media(min-width:700px){
-  #page-teacher-list{
-    max-width: 100%;
-  }
-
-  #search-teachers{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 16px;
-    position: absolute;
-    bottom: -28px;
-  }
-
-  #search-teachers .input-block + .input-block{
-    margin-top: 0;
-  }
- 
-  #page-teacher-list main{
-    padding: 32px 0;
-    max-width: 740px;
-    margin: 0 auto;
-  }
-
 }
